style: add border to default button to prevent layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
 	}
 
 	.btn-primary {
-		@apply bg-indigo-600 font-semibold text-bg disabled:bg-indigo-200 disabled:text-gray-400;
+		@apply border border-transparent bg-indigo-600 font-semibold text-bg disabled:bg-indigo-200 disabled:text-gray-400;
 		@apply hover:bg-indigo-500 hover:text-bg;
 	}
 	.btn-secondary {
